Closed
Bug 285981
Opened 21 years ago
Closed 21 years ago
[FIX]No alt text displayed with broken (security-blocked) image
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect, P1)
Core
Layout: Images, Video, and HTML Frames
Tracking
()
RESOLVED
FIXED
mozilla1.8beta2
People
(Reporter: 3.14, Assigned: bzbarsky)
References
()
Details
Attachments
(1 file)
|
3.16 KB,
patch
|
mvl
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8b) Gecko/20050217
On http://piology.org/ie/ look for the following text:
"Bilder" an, die keine sind:
Behind it is a broken image. The alt text ("[kaputtes Bild]") is not shown.
pi
Comment 1•21 years ago
|
||
Security Error: Content at http://piology.org/ie/ may not load or link to
view-source:file:///c:%5Cwindows%5Cwin.ini.
| Assignee | ||
Comment 2•21 years ago
|
||
We don't show alt text for images that are blocked in user preferences
explicitly or blocked by the security manager.
We could change that easily enough, if desired. It's a one-line change at
http://lxr.mozilla.org/seamonkey/source/content/base/src/nsContentUtils.cpp#1835
(to use REJECT_TYPE).
The question is, should we?
| Reporter | ||
Comment 3•21 years ago
|
||
OK, I see the point. I believe the alt text was displayed when I created the
page, though. I think it would make sense, the text could have some reasonable
function not usable without the text.
pi
| Assignee | ||
Comment 4•21 years ago
|
||
Yes, this behavior changed recently....
FWIW, I think it does make sense to show alt text for images blocked by the
security manager. Ian, what do you think?
QA Contact: layout.images → ian
| Assignee | ||
Comment 5•21 years ago
|
||
After some more thought, I think any status that's not REJECT_SERVER should
show the alt text (and that security should lead to a REJECT_REQUEST status).
Assignee: jdunn → bzbarsky
Status: NEW → ASSIGNED
Attachment #178630 -
Flags: superreview?(jst)
Attachment #178630 -
Flags: review?(mvl)
| Assignee | ||
Updated•21 years ago
|
OS: Windows 98 → All
Priority: -- → P1
Hardware: PC → All
Summary: No alt text displayed with broken image → [FIX]No alt text displayed with broken (security-blocked) image
Target Milestone: --- → mozilla1.8beta2
Comment 6•21 years ago
|
||
Comment on attachment 178630 [details] [diff] [review]
Proposed fix
sr=jst
Attachment #178630 -
Flags: superreview?(jst) → superreview+
Updated•21 years ago
|
Attachment #178630 -
Flags: review?(mvl) → review+
| Assignee | ||
Comment 7•21 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 8•21 years ago
|
||
could this fix have caused regression bug 287842 ?
Comment 9•21 years ago
|
||
*** Bug 299025 has been marked as a duplicate of this bug. ***
Updated•8 years ago
|
Product: Core → Core Graveyard
Updated•8 years ago
|
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•