Show alt text for images blocked by security checks.  Bug 285981, r=mvl, sr=jst